// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxedRefreshIndicator Should match all-properties snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "height": 24,
        "width": 24,
      }
    }
    testID="LoadingSpinnerTestID"
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "strokeWidth",
              ]
            }
            strokeWidth={3}
          >
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 22.5 12"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                ]
              }
              stroke={
                {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 22.5 12 A 10.5 10.5 0 0 1 1.5 12"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                ]
              }
              stroke={
                {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 1.5 11.25"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <Text>
    This is the caption
  </Text>
  <Text>
    This is the action
  </Text>
</View>
`;

exports[`BoxedRefreshIndicator Should match base snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "height": 24,
        "width": 24,
      }
    }
    testID="LoadingSpinnerTestID"
  >
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "strokeWidth",
              ]
            }
            strokeWidth={3}
          >
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 22.5 12"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                ]
              }
              stroke={
                {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 22.5 12 A 10.5 10.5 0 0 1 1.5 12"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                ]
              }
              stroke={
                {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 1.5 11.25"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
